# ltzf-collector

./: .gitignore  Dockerfile  Dockerfile.deploy  README.md  TODO  example-config.toml  oapigen.ps1  oapigen.sh  ocrtesting.py  pyproject.toml  set-version.py  variables.toml
.github/workflows/: main.yml  tests.yml
collector/: __main__.py  config.py  convert.py  document.py  document_builder.py  interface.py  llm_connector.py  main.py  scrapercache.py  tesseract_wrapper.py
collector/scrapers/: bt_scraper.py  by_dok.py  bylt_scraper.py  bylt_sitzung_scraper.py  bylt_sitzung_scraper_inactive.py  bylt_standardization.toml  result.html
collector/tests/: notest.py  test_byltscraper.py  test_byltsitzungscraper.py  test_interface.py  test_scrapercache.py
collector/tests/bylt_scraper/: list_2025-10-26.html  list_2025-10-30.htmltest  list_2025-10-30.json  session_listing_scenario_empty.json  vg_item_scenario_ablehnung.json  vg_item_scenario_autorsanitation.json  vg_item_scenario_normal_nostln.json  vg_item_scenario_normal_stln.json  vg_item_scenario_rueckzug.json  vorgang_ablehnung_2025-11-08.htmltest  vorgang_ablehnung_2025-11-08.json  vorgang_ausschuss_fertig_2025-11-08.htmltest  vorgang_ausschuss_fertig_2025-11-08.json  vorgang_beratung_folgt_2025-11-08.htmltest  vorgang_beratung_folgt_2025-11-08.json  vorgang_zustimmung_2025-11-08.htmltest  vorgang_zustimmung_2025-11-08.json  vorgang_zustimmung_2026-01-20.htmltest  vorgang_zustimmung_2026-01-20.json
collector/tests/bylt_sitzung_scraper/: session_item_scenario_normal.json  session_listing_scenario_empty.json  (+1 more)
