[tool.poetry]
name = "collector"
version = "0.2.2"
description = "Collector bundle with a sample Scraper that is forkable and meant to be forked"
authors = ["Benedikt Schäfer", "Noah Lokocz", "Liv Märtens"]
readme = "README.md"
license = "NoLicense"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.39"
beautifulsoup4 = "^4.14"
requests = "^2.32"
pydantic = "^2.9"
aiohttp = "^3.13"
redis = "^7.1"
litellm = "^1.81"
pytest-asyncio = "^1.3"
pypdf = "^6.6"
openapi-client = {path = "oapicode"}
jsondiff = "^2.2.1"
kreuzberg = {extras = ["easyocr"], version = "^4.0"}
toml = "^0.10.2"
python-dotenv = "^1.2"
jsonschema = "^4.25.1"
lazy-imports = "^1.2"

[tool.poetry.group.dev.dependencies]
black = "^26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
